# utility-sdk-rs

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  ci-test.sh  publish.sh  release-plz.toml  run-tests.sh
.cargo/: audit.toml
.github/workflows/: release-plz.yml  test.yml  test_examples.yml  test_examples_small.yml
ci/compare_sizes/: README.md  compare_sizes.py  project_instance.py
contract-builder/: Dockerfile  README.md  build.sh
examples/: build_docker.sh
examples/adder/: Cargo.toml  README.md
examples/adder/src/: lib.rs
examples/callback-results/: Cargo.toml
examples/callback-results/src/: lib.rs
examples/cross-contract-calls/: Cargo.toml
examples/cross-contract-calls/high-level/: Cargo.toml
examples/cross-contract-calls/high-level/src/: lib.rs
examples/cross-contract-calls/low-level/: Cargo.toml
examples/cross-contract-calls/low-level/src/: lib.rs
examples/cross-contract-calls/tests/: workspaces.rs
examples/factory-contract/: Cargo.toml
examples/factory-contract/high-level/: Cargo.toml
examples/factory-contract/high-level/src/: lib.rs
examples/factory-contract/low-level/: Cargo.toml
examples/factory-contract/low-level/src/: lib.rs
examples/factory-contract/tests/: workspaces.rs
examples/fungible-token/: Cargo.toml  README.md
examples/fungible-token/ft/: Cargo.toml
examples/fungible-token/ft/src/: lib.rs
examples/fungible-token/test-contract-defi/: Cargo.toml
examples/fungible-token/test-contract-defi/src/: lib.rs
examples/fungible-token/tests/: workspaces.rs
examples/lockable-fungible-token/: Cargo.toml  README.md
examples/lockable-fungible-token/src/: lib.rs
examples/lockable-fungible-token/tests/: workspaces.rs
examples/mission-control/: Cargo.toml
examples/mission-control/src/: account.rs  agent.rs  asset.rs  mission_control.rs  rate.rs
examples/non-fungible-token/: Cargo.toml  README.md
examples/non-fungible-token/nft/: Cargo.toml
examples/non-fungible-token/nft/src/: lib.rs
examples/non-fungible-token/test-approval-receiver/: Cargo.toml
examples/non-fungible-token/test-approval-receiver/src/: lib.rs
examples/non-fungible-token/test-token-receiver/: Cargo.toml
examples/non-fungible-token/test-token-receiver/src/: lib.rs
examples/non-fungible-token/tests/workspaces/: test_approval.rs  test_core.rs  test_enumeration.rs  utils.rs
examples/status-message/: Cargo.toml  README.md
examples/status-message/src/: lib.rs
examples/test-contract/: Cargo.toml  README.md
examples/test-contract/src/: lib.rs
examples/versioned/: Cargo.toml
examples/versioned/src/: lib.rs
minifier/: README.md  minify_examples.sh
unc-contract-standards/: CHANGELOG.md  Cargo.toml  README.md
unc-contract-standards/src/: contract_metadata.rs  event.rs  lib.rs
unc-contract-standards/src/fungible_token/: core.rs  core_impl.rs  events.rs  macros.rs  metadata.rs  receiver.rs  resolver.rs  storage_impl.rs
unc-contract-standards/src/non_fungible_token/: events.rs  macros.rs  metadata.rs  mod.rs  token.rs  utils.rs
unc-contract-standards/src/non_fungible_token/approval/: approval_impl.rs  approval_receiver.rs  mod.rs
unc-contract-standards/src/non_fungible_token/core/: core_impl.rs  mod.rs  receiver.rs  resolver.rs
unc-contract-standards/src/non_fungible_token/enumeration/: enumeration_impl.rs  mod.rs
unc-contract-standards/src/storage_management/: mod.rs
unc-contract-standards/src/upgrade/: mod.rs
unc-sdk/: Cargo.toml
unc-sdk-macros/: Cargo.toml  build.rs
unc-sdk-macros/src/: lib.rs
unc-sdk-macros/src/core_impl/: mod.rs
unc-sdk-macros/src/core_impl/abi/: abi_embed.rs  abi_generator.rs
unc-sdk-macros/src/core_impl/code_generator/: attr_sig_info.rs  ext.rs  impl_item_method_info.rs  metadata.rs  serializer.rs
unc-sdk-macros/src/core_impl/contract_metadata/: mod.rs
unc-sdk-macros/src/core_impl/event/: mod.rs
unc-sdk-macros/src/core_impl/info_extractor/: arg_info.rs  attr_sig_info.rs  mod.rs  (+2 more)
unc-sdk/compilation_tests/: all.rs  bad_argument.rs  borsh_storage_key.rs  borsh_storage_key_generics.rs  complex.rs  cond_compilation.rs  contract_metadata.rs  contract_metadata_bindgen.rs  contract_metadata_fn_name.rs  enum_near_bindgen.rs  enum_unc_bindgen.rs  function_error.rs  generic_const_function.rs  generic_function.rs  handle_result_alias.rs  impl_generic.rs  init_function.rs  init_ignore_state.rs  invalid_arg_pat.rs  lifetime_method.rs  no_default.rs  payable_view.rs  private.rs  private_init_method.rs  references.rs  regular.rs  schema_derive.rs  schema_derive_invalids.rs  schema_derive_invalids.stderr  self_forbidden_in_non_init_fn_arg.rs  self_forbidden_in_non_init_fn_arg.stderr  self_forbidden_in_non_init_fn_return.rs  self_forbidden_in_non_init_fn_return.stderr  self_support.rs  trait_impl.rs  types.rs
unc-sdk/src/: lib.rs  promise.rs
unc-sdk/src/collections/: lazy_option.rs  legacy_tree_map.rs  lookup_map.rs  lookup_set.rs  mod.rs  tree_map.rs  unordered_set.rs  vector.rs
unc-sdk/src/collections/unordered_map/: mod.rs
unc-sdk/src/environment/: env.rs
unc-sdk/src/environment/mock/: mocked_blockchain.rs  mocked_memory.rs  receipt.rs
unc-sdk/src/json_types/: hash.rs  integers.rs  mod.rs  vector.rs
unc-sdk/src/private/: mod.rs
unc-sdk/src/store/: index_map.rs  key.rs
unc-sdk/src/store/free_list/: mod.rs
unc-sdk/src/store/iterable_map/: entry.rs  mod.rs
unc-sdk/src/store/iterable_set/: mod.rs
unc-sdk/src/store/lazy/: mod.rs
unc-sdk/src/store/lazy_option/: mod.rs
unc-sdk/src/store/lookup_map/: entry.rs  mod.rs
unc-sdk/src/store/lookup_set/: mod.rs
unc-sdk/src/store/tree_map/: entry.rs  iter.rs  mod.rs
unc-sdk/src/store/unordered_map/: entry.rs  mod.rs
unc-sdk/src/store/unordered_set/: mod.rs
unc-sdk/src/store/vec/: mod.rs
unc-sdk/src/test_utils/: context.rs  mod.rs  test_env.rs
unc-sdk/src/types/: error.rs  mod.rs  primitives.rs  public_key.rs  vm_types.rs
unc-sdk/src/utils/: mod.rs  stable_map.rs
unc-sdk/tests/: abi_tests.rs  event_tests.rs
unc-sys/: CHANGELOG.md  Cargo.toml
(+54 files in other folders)
