[workspace]
resolver = "2"
members = [
    "unc-sdk",
    "unc-sdk-macros",
    "unc-contract-standards",
    "unc-sys",
]
exclude = ["examples/"]

[workspace.package]
version = "0.7.5"

# Special triple # comment for ci.
[patch.crates-io]
### unc-vm-logic = { git = "https://github.com/unet/utility", branch = "master" }
### unc-primitives-core = { git = "https://github.com/unet/utility", branch = "master" }
