[workspace]
resolver = "2"
members = [
    "unc-sdk",
    "unc-sdk-macros",
    "unc-contract-standards",
    "unc-sys",
]
exclude = ["examples/"]

[workspace.package]
version = "2.0.2"

# Special triple # comment for ci.
[patch.crates-io]
### unc-vm-logic = { git = "https://github.com/unet/utility", branch = "master" }
### unc-primitives-core = { git = "https://github.com/unet/utility", branch = "master" }
