[workspace]
resolver = "2"
members = [
    "unc-sdk",
    "unc-sdk-macros",
    "unc-contract-standards",
    "unc-sys",
]
exclude = ["examples/"]

[workspace.package]
version = "2.0.5"

# Special triple # comment for ci.
[patch.crates-io]
### unc-vm-logic = { git = "https://github.com/unet-org/utility", branch = "main" }
### unc-primitives-core = { git = "https://github.com/unet-org/utility", branch = "main" }
