[package]
name = "unc-contract-standards"
version.workspace = true
authors = ["Unc Inc <hello@unc.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["wasm"]
repository = "https://github.com/unc/utility-sdk-rs"
homepage = "https://unc-sdk.io"
documentation = "https://docs.rs/unc-contract-standards"
description = """
UNC smart contracts standard library.
"""

[dependencies]
unc-sdk = { path = "../unc-sdk", version = "~0.1.0", default-features = false, features = ["legacy"] }

[dev-dependencies]
unc-sdk = { path = "../unc-sdk", default-features = false, features = ["unit-testing"] }

[features]
default = []
abi = ["unc-sdk/abi"]
