[package]
name = "unc-contract-standards"
version.workspace = true
authors = ["Utility Inc <hello@utnet.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["wasm"]
repository = "https://github.com/utnet-org/utility-sdk-rs"
homepage = "https://unc-sdk.io"
documentation = "https://docs.rs/unc-contract-standards"
description = """
Utility smart contracts standard library.
"""

[dependencies]
unc-sdk = { path = "../unc-sdk", version = "2.2.0", default-features = false, features = ["legacy"] }

[dev-dependencies]
unc-sdk = { path = "../unc-sdk", default-features = false, features = ["unit-testing"] }

[features]
default = []
abi = ["unc-sdk/abi"]
