[package]
name = "unc-sys"
version.workspace = true
authors = ["Utility Inc <hello@utnet.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["wasm"]
repository = "https://github.com/utnet-org/utility-sdk-rs"
homepage = "https://unc-sdk.io"
description = """
Syscall definitions for builtin functions of the utility runtime.
"""

[dependencies]
