[package]
name = "callback-results"
version = "0.1.0"
authors = ["Hello Inc <hello@utnet.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
unc-sdk = { path = "../../unc-sdk" }

[dev-dependencies]
utility-workspaces = { version = "0.9.0", default-features = false, features = ["install"] }
serde_json = "1.0"
tokio = { version = "1.14", features = ["full"] }
anyhow = "1.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
