[package]
name = "factory-contract-wrapper"
version = "0.1.0"
authors = ["Unc Inc <hello@utility.com>"]
edition = "2021"

[dev-dependencies]
anyhow = "1.0"
test-case = "2.0"
tokio = { version = "1.14", features = ["full"] }
unc-workspaces = { version = "0.7.1", default-features = false, features = ["install"] }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"

[workspace]
members = [
  "high-level",
  "low-level",
]
