[package]
name = "mission-control"
version = "0.1.0"
authors = ["Utility Inc <hello@utnet.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
unc-sdk = { path = "../../unc-sdk" }

[dev-dependencies]
unc-sdk = { path = "../../unc-sdk", features = ["unit-testing"] }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
