[package]
name = "versioned"
version = "0.1.0"
authors = ["Unc Inc <hello@utility.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
unc-sdk = { path = "../../unc-sdk", features = ["unstable"] }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
